
                CHANGES IN party VERSION 0.9-993 (2009-01-29)

    o    new C-level function R_remove_weights


                CHANGES IN party VERSION 0.9-992 (2009-01-19)

    o   update CITATION file


                CHANGES IN party VERSION 0.9-991 (2009-01-13)

    o   new conditional variable importance measure 
        (Strobl et al., 2008, BMC Bioinformatics) available.


                CHANGES IN party VERSION 0.9-99 (2008-10-28)

    o   a suboptimal split was implemented when the best
        split corresponded to the last row of <data> due to
        a coding error. This should have happend only very
        rarely, however, the glaucoma example is affected.


                CHANGES IN party VERSION 0.9-98 (2008-10-15)

    o   don't compute ordering of censored variables (thanks to
        Brian D. Ripley for the report)

    o   experimental version of partialPlot for cforests

    o   teststat = "quad" and testtype = "Univariate" produced
        wrong criteria in the presence of constant exploratory variables.
        Spotted by Sebastian Wietzke <Sebastian.Wietzke@axa.de>


                CHANGES IN party VERSION 0.9-97 (2008-06-26)

    o   predictions for new data containing missing values were
        wrong. Bug spotted by Wei-Yin Loh <loh@stat.wisc.edu>

    o   vignette updates


                CHANGES IN party VERSION 0.9-96 (2008-06-06)

    o   make searching for surrogate splits a little more stable


                CHANGES IN party VERSION 0.9-95 (2008-02-27)

    o   proximity() now gives _relative_ numbers 
        (similar to `randomForest'), not absolute numbers
        long-standing feature request by Henric Nilsson


                CHANGES IN party VERSION 0.9-94 (2008-01-30)

    o   documentation updates


                CHANGES IN party VERSION 0.9-93 (2007-11-30)

    o   It is now an error to ask for more surrogate variables
        than actually available. Thanks to Henric Nilsson.

