@@ -1,4 +1,10 @@
 
+                CHANGES IN party VERSION 0.9-994 (2009-02-10)
+
+    o    fix bug in new varimp function (which was triggered
+         by splits in categorical variables)
+
+
                 CHANGES IN party VERSION 0.9-993 (2009-01-29)
 
     o    new C-level function R_remove_weights
